test/coupon-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupon-api-ingress
    #namespace:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # ALB를 인터넷에서 접근 가능하도록 설정
    alb.ingress.kubernetes.io/target-type: ip  # ALB가 Pod IP를 대상으로 설정
spec:
  ingressClassName: alb # ALB Ingress 클래스 지정
  rules:
    - host: cbcloud-shop.com
    - http:
        paths:
          - path: /
            pathType: Prefix  # 요청 URL의 접두사에 따라 라우팅
            backend:
              service:
                name: coupon-api  # 요청을 전달할 서비스 이름
                port:
                  number: 8080  # 서비스의 포트
